--- a/access_pass/templates/base.html
+++ b/access_pass/templates/base.html
@@ -68,9 +68,9 @@
                 <script>
                     document.write(new Date().getFullYear());
                 </script>
-                <strong><span>Konza Technopolis</span></strong>. All Rights Reserved
+                <strong><span>KRA</span></strong>. All Rights Reserved
             </div>
-            <div class="credits">Designed by <a href="#">Konza Dev Team</a></div>
+            <div class="credits">Designed by <a href="https://muriithi-ian.netlify.app/">Muriithi Ian</a></div>
         </div>
     </footer>
     <!-- End Footer -->
