--- a/access_pass/templates/base.html
+++ b/access_pass/templates/base.html
@@ -38,7 +38,7 @@
         <div class="container d-flex align-items-center">
             <!-- <h1 class="logo me-auto"><a href="index.html">e-Visit</a></h1> -->
             <!-- Uncomment below if you prefer to use an image logo -->
-            <a href="index.html" class="logo me-auto"><img
+            <a href="/home" class="logo me-auto"><img
                     src="https://www.kra.go.ke/templates/kra/images/kra/logoKRA.webp" alt="" class="img-fluid"></a>
 
             <nav id="navbar" class="navbar">
@@ -70,7 +70,7 @@
                 </script>
                 <strong><span>KRA</span></strong>. All Rights Reserved
             </div>
-            <div class="credits">Designed by <a href="https://muriithi-ian.netlify.app/">Muriithi Ian</a></div>
+            <div class="credits">Designed by <a target="_blank" href="https://muriithi-ian.netlify.app/">Muriithi Ian</a></div>
         </div>
     </footer>
     <!-- End Footer -->
