--- a/access_pass/templates/access_forms.html
+++ b/access_pass/templates/access_forms.html
@@ -2,9 +2,239 @@
 {% load static %}
 {% block content %}
 <!-- ======= Hero Section ======= -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cdbootstrap/css/bootstrap.min.css" />
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cdbootstrap/css/cdb.min.css" />
+<script defer src="https://cdn.jsdelivr.net/npm/cdbootstrap/js/cdb.min.js"></script>
+
+<script defer>
+    document.addEventListener('DOMContentLoaded', function () {
+        const stepperItem = document.querySelector('#stepper');
+        console.log("item", stepperItem)
+        const stepper = new CDB.Stepper(stepperItem);
+        return stepper
+    })
+</script>
+
 <section>
-    <div class="container">
-        <h1>NDA</h1>
+    <div class="container min-vh-100">
+        <div height="800px" class="stepper" id="stepper">
+            <div class="steps-container">
+                <div class="steps">
+                    <div class="step" icon="fa fa-pencil-alt" id="1">
+                        <div class="step-title">
+                            <span class="step-number">01</span>
+                            <div class="step-text">Data Center (DC) Rules</div>
+                        </div>
+                    </div>
+                    <div class="step" icon="fa fa-info-circle" id="2">
+                        <div class="step-title">
+                            <span class="step-number">02</span>
+                            <div class="step-text">Personal Data</div>
+                        </div>
+                    </div>
+                    <div class="step" icon="fa fa-book-reader" id="3">
+                        <div class="step-title">
+                            <span class="step-number">03</span>
+                            <div class="step-text">Terms and Conditions</div>
+                        </div>
+                    </div>
+                    <div class="step" icon="fa fa-check" id="4">
+                        <div class="step-title">
+                            <span class="step-number">04</span>
+                            <div class="step-text">Finish</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="stepper-content-container">
+                <div class="stepper-content fade-in" stepper-label="1">
+                    <div class="w-100 h-100" style="padding: 30px 10px; background: #f9f9f9;">
+                        <div class="my-0 mx-auto" style="max-width: 500px;  border-radius: 10px; background: #f5f5f5;">
+                            <div class="p-10">
+                                <div class="text-center pt-20 pe-0 pb-10 ps-0 fw-bold"
+                                    style="font-size: 30px; color: #939393">
+                                    DC Rules
+                                </div>
+                                <div class="p-10 w-100">
+                                    <p>Anyone seeking access to the DC must adhere to the rules below for harmonious
+                                        coexistence and
+                                        operation of the services and equipment in the facility;
+                                    </p>
+
+                                    <ol>
+                                        <li>Do not enter the DC with shoes-use designated footwear-DC is a dust free
+                                            zone</li>
+                                        <li>Do not eat inside the DC</li>
+                                        <li>Bags are not allowed inside the DC</li>
+                                        <li>Always register entry and exit from the DC-Manually or/and electronically.
+                                        </li>
+                                        <li>Access to DC is only for authorized service providers, contractors and
+                                            staff.</li>
+                                        <li>Access to datacenter shouid be sought at-least one daybefore.</li>
+                                        <li>Always ensure the doors to the DC are closed.</li>
+                                        <li>In case of fire/alarm exit through the designated fire exits & notifi, the
+                                            security guard and
+                                            the DC staff.</li>
+                                        <li>Always maintain the set standard (NDC is a tier III DC) when undertaking any
+                                            activity in the DC.
+                                            E.g all network & power cables and devices should be properly managed and
+                                            labeled.</li>
+                                        <li>Always follow instructions/designs provided by your supervisor.</li>
+                                        <li>Always seek guidance from DC staff if you are not sure what you should do.
+                                        </li>
+                                        <li>A11 equipment going in and out the datacenter must be recorded on the
+                                            provided counter book for
+                                            traceability and accountability.</li>
+                                        <li>Everyone entering to the DC must provide identification documents i.e.
+                                            ID/Passport.</li>
+                                        <li>Removable storage media (Memory cards, flash disk, HDD) are not allowed into
+                                            the DC.</li>
+
+
+                                    </ol>
+                                    <div class="d-flex w-100 align-items-center justify-content-between">
+                                        <button class="btn btn-dark btn-block mb-3 mt-5 ms-auto"
+                                            onclick="stepper.navigate('2')">
+                                            Next
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="stepper-content fade-in" stepper-label="2">
+                    <div class="w-100 h-100" style="padding: 30px 10px; background: #f9f9f9;">
+                        <div class="my-0 mx-auto" style="max-width: 500px;  border-radius: 10px; background: #f5f5f5;">
+                            <div class="p-10 d-flex flex-col justify-content-center align-items-center">
+                                <div class="text-center pt-20 pe-0 pb-10 ps-0 fw-bold"
+                                    style="font-size: 30px; color: #939393">
+                                    Step 2
+                                </div>
+                                <div class="p-10 d-flex flex-col justify-content-center align-items-center w-100">
+                                    <label class="text-muted mb-2">
+                                        First Name
+                                    </label>
+                                    <div class="cdb-form">
+                                        <input type="text" class="form-control bg-light " />
+                                    </div>
+                                    <label class="text-muted mb-2">
+                                        Last Name
+                                    </label>
+                                    <div class="cdb-form">
+                                        <input type="email" class="form-control bg-light " />
+                                    </div>
+                                    <label class="text-muted mb-2">
+                                        Phone Number
+                                    </label>
+                                    <div class="cdb-form">
+                                        <input type="text" class="form-control bg-light " />
+                                    </div>
+                                    <label class="text-muted mb-2">
+                                        Address
+                                    </label>
+                                    <div class="cdb-form">
+                                        <input type="email" class="form-control bg-light " />
+                                    </div>
+                                    <label class="text-muted mb-2">
+                                        Country
+                                    </label>
+                                    <div class="cdb-form">
+                                        <input type="text" class="form-control bg-light " />
+                                    </div>
+
+                                    <div class="d-flex w-100 align-items-center justify-content-between">
+                                        <button class="btn btn-dark btn-block mb-3 mt-5"
+                                            onclick="stepper.navigate('1')">
+                                            Previous
+                                        </button>
+                                        <button class="btn btn-dark btn-block mb-3 mt-5"
+                                            onclick="stepper.navigate('3')">
+                                            Next
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="stepper-content fade-in" stepper-label="3">
+                    <div class="w-100 h-100" style="padding: 30px 10px; background: #f9f9f9;">
+                        <div class="my-0 mx-auto" style="max-width: 500px;  border-radius: 10px; background: #f5f5f5;">
+                            <div class="p-10 d-flex flex-col justify-content-center align-items-center">
+                                <div class="text-center pt-20 pe-0 pb-10 ps-0 fw-bold"
+                                    style="font-size: 30px; color: #939393">
+                                    Step 3
+                                </div>
+                                <div class="p-10 d-flex flex-col justify-content-center align-items-center w-100">
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui dicta minus
+                                        molestiae vel beatae natus eveniet ratione temporibus aperiam harum alias
+                                        officiis
+                                        assumenda officia quibusdam deleniti eos cupiditate dolore doloribus!
+                                    </p>
+                                    <p>
+                                        Ad dolore dignissimos asperiores dicta facere optio quod commodi nam tempore
+                                        recusandae. Rerum sed nulla eum vero expedita ex delectus voluptates rem at
+                                        neque
+                                        quos facere sequi unde optio aliquam!
+                                    </p>
+                                    <p>
+                                        Ad dolore dignissimos asperiores dicta facere optio quod commodi nam tempore
+                                        recusandae. Rerum sed nulla eum vero expedita ex delectus voluptates rem at
+                                        neque
+                                        quos facere sequi unde optio aliquam!
+                                    </p>
+                                    <p>
+                                        Ad dolore dignissimos asperiores dicta facere optio quod commodi nam tempore
+                                        recusandae. Rerum sed nulla eum vero expedita ex delectus voluptates rem at
+                                        neque
+                                        quos facere sequi unde optio aliquam!
+                                    </p>
+                                </div>
+                                <div class="d-flex w-100 align-items-center justify-content-between">
+                                    <button class="btn btn-dark btn-block mb-3 mt-5" onclick="stepper.navigate('2')">
+                                        Previous
+                                    </button>
+                                    <button class="btn btn-dark btn-block mb-3 mt-5" onclick="stepper.navigate('4')">
+                                        Next
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="stepper-content fade-in" stepper-label="4">
+                    <div class="w-100 h-100" style="padding: 30px 10px; background: #f9f9f9;">
+                        <div class="my-0 mx-auto" style="max-width: 500px;  border-radius: 10px; background: #f5f5f5;">
+                            <div class="p-10 d-flex flex-col justify-content-center align-items-center">
+                                <div class="text-center pt-20 pe-0 pb-10 ps-0 fw-bold"
+                                    style="font-size: 30px; color: #939393">
+                                    Step 4
+                                </div>
+                                <div class="p-10 d-flex flex-col justify-content-center align-items-center w-100">
+                                    <div class="text-center" style="font-size: '25px' ; text-align: 'center'">
+                                        Congratulations! You have completed this process.
+                                        <span style=" font-size: '50px';  display: 'block' " role="img"
+                                            aria-label="image">
+                                            🎉
+                                        </span>
+                                    </div>
+                                    <div class="d-flex w-100 align-items-center justify-content-between">
+                                        <button class="btn btn-dark btn-block mb-3 mt-5"
+                                            onclick="stepper.navigate('3')">
+                                            Previous
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 <!-- End Hero -->
