--- a/access_pass/templates/base.html
+++ b/access_pass/templates/base.html
@@ -50,7 +50,7 @@
         <div class="container d-flex align-items-center">
             <!-- <h1 class="logo me-auto"><a href="index.html">e-Visit</a></h1> -->
             <!-- Uncomment below if you prefer to use an image logo -->
-            <a href="/home" class="logo me-auto"><img src="https://www.kra.go.ke/templates/kra/images/kra/logoKRA.webp"
+            <a href="/" class="logo me-auto"><img src="https://www.kra.go.ke/templates/kra/images/kra/logoKRA.webp"
                     alt="" class="img-fluid"></a>
 
             <nav id="navbar" class="navbar">
