Added setup information

--- a/access_pass/templates/base.html
+++ b/access_pass/templates/base.html
@@ -60,7 +60,7 @@
 
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li> -->
                     <li>
-                        <a class="getstarted scrollto" href="/access_form/">Data Center</a>
+                        <a class="getstarted scrollto" href="/access_form/">DC Access Pass</a>
                     </li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -82,8 +82,7 @@
                 </script>
                 <strong><span>KRA</span></strong>. All Rights Reserved
             </div>
-            <div class="credits">Designed by <a target="_blank" href="https://muriithi-ian.netlify.app/">Muriithi
-                    Ian</a></div>
+            <div class="credits">Designed by <a target="_blank" href="#">Edwin Muturi</a></div>
         </div>
     </footer>
     <!-- End Footer -->
