--- a/access_pass/templates/home.html
+++ b/access_pass/templates/home.html
@@ -8,11 +8,9 @@
             <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1"
                 data-aos="fade-up" data-aos-delay="200">
                 <h1>KRA Data Center Visitor Access 🔏</h1>
-                <h2>
-                    Please select the facility you'd like to <strong>Access</strong>
-                </h2>
+                <
                 <div class="d-flex justify-content-center justify-content-lg-start">
-                    <a href="/access_form/" class="btn-get-started">Data Center Access</a>
+                    <a href="/access_form/" class="btn-get-started">Request Primary DC Access</a>
                 </div>
             </div>
             <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
