--- a/access_pass/templates/access_forms.html
+++ b/access_pass/templates/access_forms.html
@@ -10,9 +10,21 @@
 <script defer>
     document.addEventListener('DOMContentLoaded', function () {
         const stepperItem = document.querySelector('#stepper');
-        console.log("item", stepperItem)
         const stepper = new CDB.Stepper(stepperItem);
-        return stepper
+        let count = 1;
+        const move = () => {
+            if (count == 4) {
+                window.location.href = "{% url 'success' %}";
+                clearInterval(intervalId);
+                return;
+            }
+            stepper.navigate(count);
+            scrollTo(0, 0);
+            count++;
+        }
+        const intervalId = setInterval(() => {
+            move();
+        }, 3000);
     })
 </script>
 
@@ -36,13 +48,7 @@
                     <div class="step" icon="fa fa-book-reader" id="3">
                         <div class="step-title">
                             <span class="step-number">03</span>
-                            <div class="step-text">Terms and Conditions</div>
-                        </div>
-                    </div>
-                    <div class="step" icon="fa fa-check" id="4">
-                        <div class="step-title">
-                            <span class="step-number">04</span>
-                            <div class="step-text">Finish</div>
+                            <div class="step-text">Non-Disclosure Agreement</div>
                         </div>
                     </div>
                 </div>
@@ -95,7 +101,7 @@
                                     </ol>
                                     <div class="d-flex w-100 align-items-center justify-content-between">
                                         <button class="btn btn-dark btn-block mb-3 mt-5 ms-auto"
-                                            onclick="stepper.navigate('2')">
+                                            onclick="{stepper.navigate('2')}">
                                             Next
                                         </button>
                                     </div>
@@ -107,12 +113,12 @@
                 <div class="stepper-content fade-in" stepper-label="2">
                     <div class="w-100 h-100" style="padding: 30px 10px; background: #f9f9f9;">
                         <div class="my-0 mx-auto" style="max-width: 500px;  border-radius: 10px; background: #f5f5f5;">
-                            <div class="p-10 d-flex flex-col justify-content-center align-items-center">
+                            <div class="p-10 ">
                                 <div class="text-center pt-20 pe-0 pb-10 ps-0 fw-bold"
                                     style="font-size: 30px; color: #939393">
-                                    Step 2
+                                    Personal Data
                                 </div>
-                                <div class="p-10 d-flex flex-col justify-content-center align-items-center w-100">
+                                <div class="p-10  w-100">
                                     <label class="text-muted mb-2">
                                         First Name
                                     </label>
@@ -162,12 +168,12 @@
                 <div class="stepper-content fade-in" stepper-label="3">
                     <div class="w-100 h-100" style="padding: 30px 10px; background: #f9f9f9;">
                         <div class="my-0 mx-auto" style="max-width: 500px;  border-radius: 10px; background: #f5f5f5;">
-                            <div class="p-10 d-flex flex-col justify-content-center align-items-center">
+                            <div class="p-10 ">
                                 <div class="text-center pt-20 pe-0 pb-10 ps-0 fw-bold"
                                     style="font-size: 30px; color: #939393">
-                                    Step 3
+                                    Non-Disclosure Agreement (NDA)
                                 </div>
-                                <div class="p-10 d-flex flex-col justify-content-center align-items-center w-100">
+                                <div class="p-10  w-100">
                                     <p>
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui dicta minus
                                         molestiae vel beatae natus eveniet ratione temporibus aperiam harum alias
@@ -197,37 +203,9 @@
                                     <button class="btn btn-dark btn-block mb-3 mt-5" onclick="stepper.navigate('2')">
                                         Previous
                                     </button>
-                                    <button class="btn btn-dark btn-block mb-3 mt-5" onclick="stepper.navigate('4')">
-                                        Next
+                                    <button class="btn btn-dark btn-block mb-3 mt-5">
+                                        Finish
                                     </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="stepper-content fade-in" stepper-label="4">
-                    <div class="w-100 h-100" style="padding: 30px 10px; background: #f9f9f9;">
-                        <div class="my-0 mx-auto" style="max-width: 500px;  border-radius: 10px; background: #f5f5f5;">
-                            <div class="p-10 d-flex flex-col justify-content-center align-items-center">
-                                <div class="text-center pt-20 pe-0 pb-10 ps-0 fw-bold"
-                                    style="font-size: 30px; color: #939393">
-                                    Step 4
-                                </div>
-                                <div class="p-10 d-flex flex-col justify-content-center align-items-center w-100">
-                                    <div class="text-center" style="font-size: '25px' ; text-align: 'center'">
-                                        Congratulations! You have completed this process.
-                                        <span style=" font-size: '50px';  display: 'block' " role="img"
-                                            aria-label="image">
-                                            🎉
-                                        </span>
-                                    </div>
-                                    <div class="d-flex w-100 align-items-center justify-content-between">
-                                        <button class="btn btn-dark btn-block mb-3 mt-5"
-                                            onclick="stepper.navigate('3')">
-                                            Previous
-                                        </button>
-                                    </div>
                                 </div>
                             </div>
                         </div>
