Access form wording fix

--- a/access_pass/templates/access_forms.html
+++ b/access_pass/templates/access_forms.html
@@ -42,7 +42,7 @@
                     <div class="step" icon="fa fa-info-circle" id="2">
                         <div class="step-title">
                             <span class="step-number">02</span>
-                            <div class="step-text">Personal Data</div>
+                            <div class="step-text">Access Form</div>
                         </div>
                     </div>
                     <div class="step" icon="fa fa-book-reader" id="3">
@@ -116,7 +116,7 @@
                             <div class="p-10 ">
                                 <div class="text-center pt-20 pe-0 pb-10 ps-0 fw-bold"
                                     style="font-size: 30px; color: #939393">
-                                    Personal Data
+                                    Access Form
                                 </div>
                                 <div class="p-10  w-100">
                                     <label class="text-muted mb-2">
