Success page color fix

--- a/access_pass/templates/success.html
+++ b/access_pass/templates/success.html
@@ -14,7 +14,7 @@
     </p>
 
     <p>Please take your time and familiarize yourself with DC Polices before your visit here</p>
-    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#exampleModal">
+    <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
         DC Policies
     </button>
 </div>
