Added home button and removed DC rules on success

--- a/access_pass/templates/success.html
+++ b/access_pass/templates/success.html
@@ -6,17 +6,27 @@
     <div style="border-radius:200px; height:200px; width:200px; background: #F8FAF5; margin:0 auto;">
         <i class="checkmark d-flex justify-content-center">✓</i>
     </div>
-    <h1 class="d-flex justify-content-center">Success</h1>
-    <p>We received your visit request for approval.<br /> Will send confirmation <strong>status</strong> on the
-        <strong>Team
-            Lead email
-        </strong> provided!
-    </p>
+    <h1 class="d-flex justify-content-center">Access Form Submitted</h1>
+    <p>Your visit request has been received for approval.<br /> A confirmation will be sent to your email ASAP </p>
 
-    <p>Please take your time and familiarize yourself with DC Polices before your visit here</p>
-    <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
-        DC Policies
-    </button>
+    <p><strong>Any person authorized to enter the DC must adhere to the following rules:
+        </strong></p>
+    <ol class="text-left d-flex flex-column flex-start  list-group-flush">
+        <li>Shall NOT, without the prior written consent of KRA, divulge any information pertaining the data centre to
+            any person
+            except their own employees who need to know the same. Such persons shall also be bound by the KRA DC Non
+            Dis-closure
+            Agreement.</li>
+        <li>Unauthorized devices and equipment not declared in Section A above ARE NOT allowed in the Data Centre.</li>
+        <li>Photography IS NOT allowed within and outside the Data Centre Facilities.
+        </li>
+        <li>Food and drinks ARE NOT allowed within the Data Centre Facilities.</li>
+    </ol>
+
+    <p>The KRA Data Centre facility is classified as a “Restricted Area” and access to it is therefore subject to Information System Security
+        and Corporate Security policies and regulations. The Head of ICT Division and Chief Manager ITI reserve the right of admission.</p>
+
+
 </div>
 
 <!-- Modal -->
