--- a/access_pass/templates/base.html
+++ b/access_pass/templates/base.html
@@ -55,13 +55,19 @@
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+
+                    <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+                    <!--
             <li><a class="nav-link scrollto" href="#about">About</a></li>
 
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li> -->
-                    <li>
-                        <a class="getstarted scrollto" href="/access_form/">DC Access Pass</a>
-                    </li>
+
+
+                    {% if user.is_authenticated %}
+                    <li><a class="nav-link scrollto" href="#">Logout</a></li>
+                    {% elif request.path == '/' %}
+                    <li><a class="nav-link scrollto" href="#">Admin</a></li>
+                    {% endif %}
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
