--- a/access_pass/templates/success.html
+++ b/access_pass/templates/success.html
@@ -9,24 +9,10 @@
     <h1 class="d-flex justify-content-center">Access Form Submitted</h1>
     <p>Your visit request has been received for approval.<br /> A confirmation will be sent to your email ASAP </p>
 
-    <p><strong>Any person authorized to enter the DC must adhere to the following rules:
-        </strong></p>
-    <ol class="text-left d-flex flex-column flex-start  list-group-flush">
-        <li>Shall NOT, without the prior written consent of KRA, divulge any information pertaining the data centre to
-            any person
-            except their own employees who need to know the same. Such persons shall also be bound by the KRA DC Non
-            Dis-closure
-            Agreement.</li>
-        <li>Unauthorized devices and equipment not declared in Section A above ARE NOT allowed in the Data Centre.</li>
-        <li>Photography IS NOT allowed within and outside the Data Centre Facilities.
-        </li>
-        <li>Food and drinks ARE NOT allowed within the Data Centre Facilities.</li>
-    </ol>
-
-    <p>The KRA Data Centre facility is classified as a “Restricted Area” and access to it is therefore subject to Information System Security
-        and Corporate Security policies and regulations. The Head of ICT Division and Chief Manager ITI reserve the right of admission.</p>
-
-
+    <p>Please take your time and familiarize yourself with some DC Rules before your visit here</p>
+    <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
+        DC Rules
+    </button>
 </div>
 
 <!-- Modal -->
@@ -42,31 +28,28 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p>Anyone seeking access to the DC must adhere to the rules below for harmonious coexistence and
-                    operation of the services and equipment in the facility;
-                </p>
-
-                <ol>
-                    <li>Do not enter the DC with shoes-use designated footwear-DC is a dust free zone</li>
-                    <li>Do not eat inside the DC</li>
-                    <li>Bags are not allowed inside the DC</li>
-                    <li>Always register entry and exit from the DC-Manually or/and electronically.</li>
-                    <li>Access to DC is only for authorized service providers, contractors and staff.</li>
-                    <li>Access to datacenter shouid be sought at-least one daybefore.</li>
-                    <li>Always ensure the doors to the DC are closed.</li>
-                    <li>In case of fire/alarm exit through the designated fire exits & notifi, the security guard and
-                        the DC staff.</li>
-                    <li>Always maintain the set standard (NDC is a tier III DC) when undertaking any activity in the DC.
-                        E.g all network & power cables and devices should be properly managed and labeled.</li>
-                    <li>Always follow instructions/designs provided by your supervisor.</li>
-                    <li>Always seek guidance from DC staff if you are not sure what you should do.</li>
-                    <li>A11 equipment going in and out the datacenter must be recorded on the provided counter book for
-                        traceability and accountability.</li>
-                    <li>Everyone entering to the DC must provide identification documents i.e. ID/Passport.</li>
-                    <li>Removable storage media (Memory cards, flash disk, HDD) are not allowed into the DC.</li>
-
-
+                <p><strong>Any person authorized to enter the DC must adhere to the following rules:
+                    </strong></p>
+                <ol class="text-left d-flex flex-column flex-start  list-group-flush">
+                    <li>Shall NOT, without the prior written consent of KRA, divulge any information pertaining the data
+                        centre to
+                        any person
+                        except their own employees who need to know the same. Such persons shall also be bound by the
+                        KRA DC Non
+                        Dis-closure
+                        Agreement.</li>
+                    <li>Unauthorized devices and equipment not declared in Section A above ARE NOT allowed in the Data
+                        Centre.</li>
+                    <li>Photography IS NOT allowed within and outside the Data Centre Facilities.
+                    </li>
+                    <li>Food and drinks ARE NOT allowed within the Data Centre Facilities.</li>
                 </ol>
+
+                <p>The KRA Data Centre facility is classified as a “Restricted Area” and access to it is therefore
+                    subject to Information System Security
+                    and Corporate Security policies and regulations. The Head of ICT Division and Chief Manager ITI
+                    reserve the right of admission.</p>
+
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     <input type="hidden" name="org_id" value="">
