added access forms

--- a/access_pass/templates/base.html
+++ b/access_pass/templates/base.html
@@ -42,6 +42,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Template Main CSS File -->
     <link href="{% static 'main/assets/css/style.css' %}" rel="stylesheet" />
+
+    {% block head %}{% endblock %}
 </head>
 
 <body>
@@ -55,8 +57,7 @@
 
             <nav id="navbar" class="navbar">
                 <ul>
-
-                    <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+                    <li><a class="nav-link scrollto active" href="/"><i class="bi bi-house-door-fill" style="font-size: 20px; color: #ffffff;"></i></a></li>
                     <!--
             <li><a class="nav-link scrollto" href="#about">About</a></li>
 
