--- a/access_pass/templates/access_forms.html
+++ b/access_pass/templates/access_forms.html
@@ -81,7 +81,7 @@
                 <!-- <button class="btn btn-info col-3" name="wizard_goto_step" type="submit"
                     value="{{ wizard.steps.first }}">first step</button> -->
                 <button class="btn btn-info col-3" name="wizard_goto_step" type="submit"
-                    value="{{ wizard.steps.prev }}">prev step</button>
+                    value="{{ wizard.steps.prev }}">Previous</button>
                 {% endif %}
                 <button class="btn btn-success col-3" type="submit">Next</button>
             </div>
