--- a/access_pass/templates/base.html
+++ b/access_pass/templates/base.html
@@ -81,7 +81,7 @@
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
-        <div class="container footer-bottom clearfix">
+        <div class="container d-flex justify-content-center footer-bottom clearfix">
             <div class="copyright">
                 &copy; Copyright
                 <script>
@@ -89,7 +89,7 @@
                 </script>
                 <strong><span>KRA</span></strong>. All Rights Reserved
             </div>
-            <div class="credits">Designed by <a target="_blank" href="#">Edwin Muturi</a></div>
+            <!-- <div class="credits">Designed by <a target="_blank" href="#">Edwin Muturi</a></div> -->
         </div>
     </footer>
     <!-- End Footer -->
