--- a/access_pass/templates/sign_nda.html
+++ b/access_pass/templates/sign_nda.html
@@ -29,7 +29,7 @@
 
 				<h5>INFORMATION CONFIDENTIALITY AGREEMENT</h5>
 				<p>
-					This Non-Disclosure Agreement (NDA) is made this {% now "jS F Y H:i" %}
+					This Non-Disclosure Agreement (NDA) is made this {% now "jS F Y" %}
 				</p>
 
 				<p>BETWEEN</p>
