--- a/access_pass/templates/base.html
+++ b/access_pass/templates/base.html
@@ -122,6 +122,8 @@
 
     <!-- Template Main JS File -->
     <script src="{% static 'main/assets/js/main.js' %}"></script>
+    
+    {% block script %}{% endblock %}
+        
 </body>
-
-</html>
+</html> 
