Save data to database

--- a/access_pass/templates/base.html
+++ b/access_pass/templates/base.html
@@ -82,12 +82,12 @@
     <!-- ======= Footer ======= -->
     <footer id="footer">
         <div class="container d-flex justify-content-center footer-bottom clearfix">
-            <div class="copyright">
-                &copy; Copyright
+            <div class="copyright" style="font-style: italic;">
+                &copy;
                 <script>
                     document.write(new Date().getFullYear());
                 </script>
-                <strong><span>KRA</span></strong>. All Rights Reserved
+                . Tulipe ushuru tujitegemee!
             </div>
             <!-- <div class="credits">Designed by <a target="_blank" href="#">Edwin Muturi</a></div> -->
         </div>
