--- a/access_pass/templates/base.html
+++ b/access_pass/templates/base.html
@@ -65,9 +65,9 @@
 
 
                     {% if user.is_authenticated %}
-                    <li><a class="nav-link scrollto" href="#">Logout</a></li>
+                    <li><a class="nav-link scrollto" href="{% url 'home' %}">Logout</a></li>
                     {% elif request.path == '/' %}
-                    <li><a class="nav-link scrollto" href="{% url 'applicants' %}">Admin</a></li>
+                    <li><a class="nav-link" href="{% url 'signin' %}">Admin</a></li>
                     {% endif %}
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
