--- a/access_pass/templates/base.html
+++ b/access_pass/templates/base.html
@@ -65,8 +65,9 @@
 
 
                     {% if user.is_authenticated %}
-                    <li><a class="nav-link scrollto" href="{% url 'home' %}">Logout</a></li>
-                    {% elif request.path == '/' %}
+                    <li><a class="nav-link scrollto" href="{% url 'applicants' %}">Requests</a></li>
+                    <li><a class="nav-link scrollto" href="{% url 'signout' %}">Logout</a></li>
+                    {% else %}
                     <li><a class="nav-link" href="{% url 'signin' %}">Admin</a></li>
                     {% endif %}
                 </ul>
@@ -76,6 +77,19 @@
         </div>
     </header>
     <!-- End Header -->
+
+<!--    {% if messages %}-->
+<!--        <div class="row">-->
+<!--            <div class="col-md-12">-->
+<!--                {% for message in messages %}-->
+<!--                <div class="alert alert-{{ message.tags }} alert-dismissible show fade" role="alert">-->
+<!--                    {{ message }}-->
+<!--                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>-->
+<!--                </div>-->
+<!--                {% endfor %}-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    {% endif %}-->
 
     {% block content %}{% endblock %}
 
