Fix: empty records

--- a/access_pass/templates/tables.html
+++ b/access_pass/templates/tables.html
@@ -16,7 +16,7 @@
     </tr>
     </thead>
     <tbody>
-    {% if len(visit) > 0 %}
+    {% if len(visits) > 0 %}
     {% for visit in visits %}
     {% if visit.personnel__primary_personnel == True %}
         <tr>
