--- a/access_pass/templates/sign_nda.html
+++ b/access_pass/templates/sign_nda.html
@@ -9,6 +9,7 @@
 <!-- ======= Hero Section ======= -->
 
 <div class="container" style="margin-top: 90px; min-height: 80vh; max-width: 70%">
+	<p>{{ reason_for_visit_data }}</p>
 	<p>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</p>
 	<form method="post" class="form hero">
 		{% csrf_token %} {{ wizard.management_form }}
@@ -42,12 +43,14 @@
 					so admits include its successors and assigns) of the one part
 				</p>
 				<p>AND</p>
-				<p>{Company Name} of</p>
+				<p> <strong style="text-decoration:underline"> {{ visit_data.organization_department }}</strong>  of </p>
 				<p>
 					(here in after referred as the “Third Party”) on the other hand. For
 					the provision
-					of........................................................................................................................
-					(Describe nature of work/services).
+					of:
+					<ul>
+						<li><strong style="text-decoration:underline">{{ visit_data.reason_for_visit }}</strong></li>
+					</ul>
 				</p>
 
 				<p>
@@ -201,13 +204,13 @@
 									the case of KRA to:
 								</p>
 								<p>
-									<strong>Attn:</strong>
+									Attn: <strong style="text-decoration:underline">{{ visit_data.full_name }} </strong>
 								</p>
 								<p>
-									Email: [email]
+									Email: <strong style="text-decoration:underline">{{ visit_data.email_address }}</strong>
 								</p>
 								<p>
-									Telephone: [telephone]
+									Telephone: <strong style="text-decoration:underline">{{ visit_data.mobile_number }}</strong>
 								</p>
 							</li>
 						</ol>
