--- a/access_pass/templates/base.html
+++ b/access_pass/templates/base.html
@@ -57,7 +57,7 @@
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="/"><i class="bi bi-house-door-fill" style="font-size: 20px; color: #ffffff;"></i></a></li>
+                    <li><a class="nav-link scrollto active" href="/"><i class="bi bi-house-door-fill" style="font-size:20px;"></i></a></li>
                     <!--
             <li><a class="nav-link scrollto" href="#about">About</a></li>
 
@@ -65,6 +65,8 @@
 
 
                     {% if user.is_authenticated %}
+<!--                    notification count-->
+                    <li><a class="nav-link scrollto" href="{% url 'applicants' %}"><i class="bi bi-bell" style="font-size:20px; font-style:normal;">{% if notifications > 0 %} {{ notifications }} {% endif %}</i></a></li>
                     <li><a class="nav-link scrollto" href="{% url 'applicants' %}">Requests</a></li>
                     <li><a class="nav-link scrollto" href="{% url 'signout' %}">Logout</a></li>
                     {% else %}
